<resources>
    <string name="iLC_logo_description">iLearnCentral Logo</string>
    <string name="sign_up"><b><u>Sign Up</u></b></string>
    <string name="log_in">Log In</string>
    <string name="user_id">Username / Email</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="learning_center">Learning Center</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up_in_with">Sign Up with</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="answer">Answer</string>
    <string name="account_type">Account type</string>
    <string name="account_type_hint">Student</string>
    <string name="question">Questions</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="_continue">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="center_id">Center ID</string>
    <string name="business_information">Business Information</string>
    <string name="business_operation">Business Operation</string>
    <string name="access_level">Access level</string>
    <string name="status">Status</string>
    <string name="business_name">Business Name</string>
    <string name="service_type">Service Type</string>
    <string name="business_address">Business Address</string>
    <string name="address">Address</string>
    <string name="current_address">Current Address</string>
    <string name="building_number">Building No.</string>
    <string name="building_name">Building Name</string>
    <string name="house_no">House No.</string>
    <string name="subdivision">Subdivision</string>
    <string name="barangay">Barangay</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="country">Country</string>
    <string name="zip_cocde">Zip Code</string>
    <string name="contact_Email">Contact Email</string>
    <string name="contact_number">Contact #</string>
    <string name="company_website">Website</string>
    <string name="operating_days"><u>Operating Days</u></string>
    <string name="opening_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="course_offered">Course</string>
    <string name="subscription">Subscription</string>
    <string name="subscription_end_date">Subscription End</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="app_Name">i Learn Central</string>
    <string name="separator">|</string>
    <string name="facebookIcon">Facebook Icon Link</string>
    <string name="twitterIcon">Twitter Icon Link</string>
    <string name="googleIcon">Google Icon Link</string>

    -- Labels --
    <string name="create_learningcenter_account_title">Create a <u><b>Learning Center</b></u> account</string>
    <string name="create_educator_account_title">Create an <u><b>Educator</b></u> account</string>
    <string name="create_student_account_title">Create a <u><b>Student</b></u> account</string>
    <string name="sun_text">Sun</string>
    <string name="mon_text">Mon</string>
    <string name="tue_text">Tue</string>
    <string name="wed_text">Wed</string>
    <string name="thu_text">Thu</string>
    <string name="fri_text">Fri</string>
    <string name="sat_text">Sat</string>
    <string name="profile_page">USER PROFILE</string>
    <string name="news_feed_page">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
</resources>
