<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_scrollview"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_linear"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/logo_icon"
            android:contentDescription="@string/iLC_logo_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false" >

            <EditText
                android:id="@+id/usernameTextBox"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:background="@drawable/text_view_bg_rounded"
                android:drawableStart="@drawable/person"
                android:drawablePadding="20dp"
                android:hint="@string/user_id"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/text_color"
                android:textColorHighlight="@color/mint_blue"
                android:textColorHint="@color/text_hint_color"
                android:textColorLink="@color/light_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:hintEnabled="false" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextBox"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/text_view_bg_rounded"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/text_color"
                android:textColorHighlight="@color/mint_blue"
                android:textColorHint="@color/text_hint_color"
                android:textColorLink="@color/light_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logInButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_dark_blue"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/log_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/text_button_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signUpLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textAlignment="viewStart"
                android:textColor="@color/text_link_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/signUpWithLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/forgotPasswordLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/signUpWithLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </LinearLayout>

        <TextView
            android:id="@+id/signUpWithLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="18dp"
            android:text="@string/sign_up_in_with"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/bg_linear"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/sign_up_with_icons_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="100dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebookIconLink"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/facebook"
                    android:clickable="true"
                    android:contentDescription="@string/facebookIcon"
                    android:focusable="true" />

                <ImageView
                    android:id="@+id/twitterIconLink"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/twitter"
                    android:clickable="true"
                    android:contentDescription="@string/twitterIcon"
                    android:focusable="true" />

                <ImageView
                    android:id="@+id/googleIconLink"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/google"
                    android:clickable="true"
                    android:contentDescription="@string/googleIcon"
                    android:focusable="true" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>